Random Programs/compiling_error.txt
C:\Users\objec\Github\Random Programs\tab.cpp: In function 'int main(int, const char**)':
C:\Users\objec\Github\Random Programs\tab.cpp:10:14: error: no match for 'operator^' (operand types are 'std::basic_ostream<char>' and 'int')
     cout << 2^2;
              ^
In file included from c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\ios:42:0,
                 from c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\ostream:38,
                 from c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\iostream:39,
                 from C:\Users\objec\Github\Random Programs\tab.cpp:1:
c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\bits\ios_base.h:91:3: note: candidate: std::_Ios_Fmtflags std::operator^(std::_Ios_Fmtflags, std::_Ios_Fmtflags)
   operator^(_Ios_Fmtflags __a, _Ios_Fmtflags __b)
   ^
c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\bits\ios_base.h:91:3: note:   no known conversion for argument 1 from 'std::basic_ostream<char>' to 'std::_Ios_Fmtflags'
c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\bits\ios_base.h:133:3: note: candidate: std::_Ios_Openmode std::operator^(std::_Ios_Openmode, std::_Ios_Openmode)
   operator^(_Ios_Openmode __a, _Ios_Openmode __b)
   ^
c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\bits\ios_base.h:133:3: note:   no known conversion for argument 1 from 'std::basic_ostream<char>' to 'std::_Ios_Openmode'
c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\bits\ios_base.h:173:3: note: candidate: std::_Ios_Iostate std::operator^(std::_Ios_Iostate, std::_Ios_Iostate)
   operator^(_Ios_Iostate __a, _Ios_Iostate __b)
   ^
c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\bits\ios_base.h:173:3: note:   no known conversion for argument 1 from 'std::basic_ostream<char>' to 'std::_Ios_Iostate'
